[package]
name = "circe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { git = "https://github.com/ua-kxie/bevy" }

[workspace]
members = [
    "paprika",
]
