[package]
name = "circe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version="0.13"}
euclid = {version="0.22.9", features = ["serde"]}
petgraph = "0.6.3"
serde = {version="1.0.164", features = ["derive"]}

[workspace]
members = [
    "paprika",
]
