[package]
name = "paprika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "paprika"
path = "src/lib.rs"

[dependencies]
libloading = "0.7"
libc = "0.2"
colored = "2.0"
serde = { version = "1.0", optional = true, features = ["derive"]}
num = "0.4.1"

[features]
serde = ["dep:serde", "num/serde"]